docs(index): update Today callout copy with Google/Meta integrations and line break

--- a/index.mdx
+++ b/index.mdx
@@ -12,8 +12,8 @@ keywords:
   - "Meta Ads optimization"
 ---
 
-<Check>Today: connect your core ad platforms in minutes.</Check>
-<Info>Coming soon: CRM, lead distribution, and accounting integrations to extend visibility from spend to revenue.</Info>
+<Check><strong>Today:</strong><br/>Google and Meta ad integrations (other major ad platforms coming soon) unify performance visibility.</Check>
+<Info><strong>Coming soon:</strong><br/>CRM, lead distribution, and accounting integrations for full clarity from spend to revenue.</Info>
 
 ## Why your team will actually use Flyweel
 
