seo: add robots.txt + enable sitemap; hide internal docs from index/sitemap via hidden+noindex; add sitemap note on index

--- a/templates/changelog-update-template.mdx
+++ b/templates/changelog-update-template.mdx
@@ -1,3 +1,9 @@
+---
+title: "Internal: Changelog Update Template"
+hidden: true
+robots: "noindex, nofollow"
+---
+
 {/* Template for a single changelog update block. Replace placeholders and paste into changelog.mdx */}
 
 <Update label="{{LABEL}}" description="{{VERSION}}" tags={["{{TAG1}}", "{{TAG2}}"]}>
