--- a/index.mdx
+++ b/index.mdx
@@ -12,7 +12,7 @@ keywords:
   - "Meta Ads optimization"
 ---
 
-<Check><strong>Today:</strong><br/>Google and Meta ad integrations (other major ad platforms coming soon) unify performance visibility.</Check>
+<Check><strong>Today:</strong><br/>Google and Meta integrations (other ad platforms coming soon) unify performance visibility.</Check>
 <Info><strong>Coming soon:</strong><br/>CRM, lead distribution, and accounting integrations for full clarity from spend to revenue.</Info>
 
 ## Why your team will actually use Flyweel
