index: add 'Data Connections' section with Update tag

--- a/index.mdx
+++ b/index.mdx
@@ -15,6 +15,12 @@ keywords:
 <Check><strong>What's already available:</strong><br/>Google and Meta ad integrations (other major platforms coming soon) unify performance channels.</Check>
 <Info><strong>Coming soon:</strong><br/>CRM, lead distribution, and accounting integrations for full clarity from spend to revenue.</Info>
 
+### Data Connections
+
+<Update label="2024-10-11" description="Closed Beta v1.0">
+  Google Ads and Meta Ads integrations available in closed beta.
+</Update>
+
 ## Why your team will actually use Flyweel
 
 - Stop budget bleed — Catch wasted spend fast and shut down underperformers before they drain results.
