index: update Data Connections Update block with callouts and new date

--- a/index.mdx
+++ b/index.mdx
@@ -17,8 +17,9 @@ keywords:
 
 ### Data Connections
 
-<Update label="2024-10-11" description="Closed Beta v1.0">
-  Google Ads and Meta Ads integrations available in closed beta.
+<Update label="20 August 2025" description="Closed Beta v1.0">
+  <Check><strong>What's already available:</strong><br/>Google and Meta ad integrations (other major platforms coming soon) unify performance channels.</Check>
+  <Info><strong>Coming soon:</strong><br/>CRM, lead distribution, and accounting integrations for full clarity from spend to revenue.</Info>
 </Update>
 
 ## Why your team will actually use Flyweel
