--- a/index.mdx
+++ b/index.mdx
@@ -12,10 +12,7 @@ keywords:
   - "Meta Ads optimization"
 ---
 
-<Check><strong>What's already available:</strong><br/>Google and Meta ad integrations (other major platforms coming soon) unify performance channels.</Check>
-<Info><strong>Coming soon:</strong><br/>CRM, lead distribution, and accounting integrations for full clarity from spend to revenue.</Info>
-
-### Data Connections
+### [Latest] Data Sources
 
 <Update label="20 August 2025" description="Closed Beta v1.0">
   <Check><strong>What's already available:</strong><br/>Google and Meta ad integrations (other major platforms coming soon) unify performance channels.</Check>
