--- a/index.mdx
+++ b/index.mdx
@@ -12,7 +12,7 @@ keywords:
   - "Meta Ads optimization"
 ---
 
-### [Latest] Data Sources
+### Data Sources <Badge color="green">Latest</Badge>
 
 <Update label="20 August 2025" description="Closed Beta v1.0">
   <Check><strong>What's already available:</strong><br/>Google and Meta ad integrations (other major platforms coming soon) unify performance channels.</Check>
