style(index): superscript Latest label without brackets; set font-size to .06rem; keep primary accent

--- a/index.mdx
+++ b/index.mdx
@@ -12,7 +12,7 @@ keywords:
   - "Meta Ads optimization"
 ---
 
-### Data Sources <Badge color="green">Latest</Badge>
+### Data Sources <sup style={{ color: '#90DAB8', fontSize: '.06rem' }}>Latest</sup>
 
 <Update label="20 August 2025" description="Closed Beta v1.0">
   <Check><strong>What's already available:</strong><br/>Google and Meta ad integrations (other major platforms coming soon) unify performance channels.</Check>
