Add closed beta hero image to homepage and enable contextual menu
- Moved OPENGRAPH IMAGE-1.webp to /images/closed-beta-hero.webp
- Added Frame component with hero image at top of index.mdx
- Contextual menu already enabled in docs.json with all AI tool options

--- a/index.mdx
+++ b/index.mdx
@@ -12,6 +12,10 @@ keywords:
   - "Meta Ads optimization"
 ---
 
+<Frame>
+  <img src="/images/closed-beta-hero.webp" alt="Flyweel: Closed beta now live." />
+</Frame>
+
 ### Data Sources <sup style={{ color: '#90DAB8', fontSize: '0.725rem' }}>Latest</sup>
 
 <Update label="20 August 2025" description="Closed Beta v1.0">
