Reduce hero image height by 40%
- Added inline styling to reduce height to 60% of original
- Added objectFit: 'cover' to maintain aspect ratio

--- a/index.mdx
+++ b/index.mdx
@@ -13,7 +13,7 @@ keywords:
 ---
 
 <Frame>
-  <img src="/images/closed-beta-hero.webp" alt="Flyweel: Closed beta now live." />
+  <img src="/images/closed-beta-hero.webp" alt="Flyweel: Closed beta now live." style={{ height: '60%', width: '100%', objectFit: 'cover' }} />
 </Frame>
 
 ### Data Sources <sup style={{ color: '#90DAB8', fontSize: '0.725rem' }}>Latest</sup>
