--- a/index.mdx
+++ b/index.mdx
@@ -12,8 +12,8 @@ keywords:
   - "Meta Ads optimization"
 ---
 
-<Frame>
-  <img src="/images/closed-beta-hero.webp" alt="Flyweel: Closed beta now live." style={{ height: '60%', width: '100%', objectFit: 'cover' }} />
+<Frame style={{ maxHeight: '300px', overflow: 'hidden' }}>
+  <img src="/images/closed-beta-hero.webp" alt="Flyweel: Closed beta now live." style={{ height: '100%', width: '100%', objectFit: 'cover' }} />
 </Frame>
 
 ### Data Sources <sup style={{ color: '#90DAB8', fontSize: '0.725rem' }}>Latest</sup>
