Make image fill the reduced frame completely
- Changed Frame maxHeight to fixed height: '300px'
- Set image height to exactly '300px' to fill frame
- Added display: 'block' to remove any spacing issues
- Kept objectFit: 'cover' for proper scaling

--- a/index.mdx
+++ b/index.mdx
@@ -12,8 +12,8 @@ keywords:
   - "Meta Ads optimization"
 ---
 
-<Frame style={{ maxHeight: '300px', overflow: 'hidden' }}>
-  <img src="/images/closed-beta-hero.webp" alt="Flyweel: Closed beta now live." style={{ height: '100%', width: '100%', objectFit: 'cover' }} />
+<Frame style={{ height: '300px', overflow: 'hidden' }}>
+  <img src="/images/closed-beta-hero.webp" alt="Flyweel: Closed beta now live." style={{ height: '300px', width: '100%', objectFit: 'cover', display: 'block' }} />
 </Frame>
 
 ### Data Sources <sup style={{ color: '#90DAB8', fontSize: '0.725rem' }}>Latest</sup>
