Optimize image cover for slimmer height container
- Changed image height to 100% to fill frame exactly
- Added objectPosition: 'center' for better image positioning
- objectFit: 'cover' ensures image scales to fill full width while maintaining aspect ratio

--- a/index.mdx
+++ b/index.mdx
@@ -13,7 +13,7 @@ keywords:
 ---
 
 <Frame style={{ height: '300px', overflow: 'hidden' }}>
-  <img src="/images/closed-beta-hero.webp" alt="Flyweel: Closed beta now live." style={{ height: '300px', width: '100%', objectFit: 'cover', display: 'block' }} />
+  <img src="/images/closed-beta-hero.webp" alt="Flyweel: Closed beta now live." style={{ height: '100%', width: '100%', objectFit: 'cover', objectPosition: 'center', display: 'block' }} />
 </Frame>
 
 ### Data Sources <sup style={{ color: '#90DAB8', fontSize: '0.725rem' }}>Latest</sup>
