--- a/index.mdx
+++ b/index.mdx
@@ -12,20 +12,8 @@ keywords:
   - "Meta Ads optimization"
 ---
 
-<Frame style={{ height: '300px', overflow: 'hidden' }}>
-  <div 
-    style={{
-      height: '100%',
-      width: '100%',
-      backgroundImage: 'url(/images/closed-beta-hero.webp)',
-      backgroundSize: 'cover',
-      backgroundPosition: 'center center',
-      backgroundRepeat: 'no-repeat',
-      borderRadius: '8px'
-    }}
-    role="img"
-    aria-label="Flyweel: Closed beta now live."
-  />
+<Frame>
+  <img src="/images/closed-beta-hero.webp" alt="Flyweel: Closed beta now live." style={{ width: '100%', height: '300px', objectFit: 'cover', objectPosition: 'center 40%' }} />
 </Frame>
 
 ### Data Sources <sup style={{ color: '#90DAB8', fontSize: '0.725rem' }}>Latest</sup>
