--- a/index.mdx
+++ b/index.mdx
@@ -13,7 +13,13 @@ keywords:
 ---
 
 <Frame>
-  <img src="/images/closed-beta-hero.webp" alt="Flyweel: Closed beta now live." style={{ width: '100%', height: '300px', objectFit: 'cover', objectPosition: 'center 40%' }} />
+  <img 
+    className="w-full rounded-xl" 
+    src="/images/closed-beta-hero.webp" 
+    alt="Flyweel: Closed beta now live." 
+    height="300"
+    style={{ objectFit: 'cover', objectPosition: 'center 40%' }}
+  />
 </Frame>
 
 ### Data Sources <sup style={{ color: '#90DAB8', fontSize: '0.725rem' }}>Latest</sup>
