Fix image sizing using consistent inline styles
- Moved width: '100%' to style object for consistency
- Changed height from HTML attribute to style: height: '225px'
- All dimensions now in style object with objectFit and objectPosition
- Kept rounded-xl className for border radius

--- a/index.mdx
+++ b/index.mdx
@@ -13,11 +13,10 @@ keywords:
 ---
 
 <img 
-  className="w-full rounded-xl" 
+  className="rounded-xl" 
   src="/images/closed-beta-hero.webp" 
   alt="Flyweel: Closed beta now live." 
-  height="225"
-  style={{ objectFit: 'cover', objectPosition: 'center 40%' }}
+  style={{ width: '100%', height: '225px', objectFit: 'cover', objectPosition: 'center 40%' }}
 />
 
 ### Data Sources <sup style={{ color: '#90DAB8', fontSize: '0.725rem' }}>Latest</sup>
