Reduce top padding above hero image to 5px
- Added marginTop: '5px' to image style object
- Brings hero image closer to top of page content area
- Maintains all other styling properties

--- a/index.mdx
+++ b/index.mdx
@@ -16,7 +16,7 @@ keywords:
   className="rounded-xl" 
   src="/images/closed-beta-hero.webp" 
   alt="Flyweel: Closed beta now live." 
-  style={{ width: '100%', height: '310px', objectFit: 'cover', objectPosition: 'center 40%' }}
+  style={{ width: '100%', height: '310px', objectFit: 'cover', objectPosition: 'center 40%', marginTop: '5px' }}
 />
 
 ### Data Sources <sup style={{ color: '#90DAB8', fontSize: '0.725rem' }}>Latest</sup>
