Update changelog with accurate content
- Simplified performance improvements section
- Removed dashboard/API speed claims
- Updated bug fixes to reflect UI/UX and database syncing
- Updated future features: Pipedrive, HubSpot, user roles/permissions
- Aligned key features with content

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -4,18 +4,59 @@ description: "Product updates and announcements"
 rss: true
 ---
 
-<Update label="August 2025" description="v0.1.1" tags={["Flyweel"]}>
-  ## Example update
+<Update label="August 2025" description="v0.1.1" tags={["Performance", "Bug Fixes"]}>
+  ## Performance & Stability Update
 
-  You can add anything here, like a screenshot, a code snippet, or a list of changes.
+  Major performance improvements, enhanced dashboard speed, and critical bug fixes for a smoother experience.
+
+  We've been listening to your feedback and have shipped a major update focused on performance and stability. This release addresses the most common issues reported during our beta phase.
+
+  ### Performance Improvements
+
+  Our engineering team has completely reworked the data fetching layer:
+
+  * **Incremental syncs**: Improved database partitioning for faster data synchronization
+
+  ### Bug Fixes
+
+  We've squashed several bugs that were impacting user experience:
+
+  * **UI/UX improvements**: Fixed various interface bugs and improved overall user experience
+  * **Database syncing**: Enhanced data synchronization reliability with better error handling
+
+  ### What's Next
+
+  We're already working on the next update which will include:
+
+  * Pipedrive CRM integration
+  * HubSpot integration
+  * User roles and team permissions
+
+  Thank you for your patience and continued feedback. Keep it coming!
+
+  — The Flyweel Team
+
+  ### Key Features
+
+  * Improved database partitioning and incremental syncs
+  * Enhanced UI/UX with bug fixes
+  * Better error handling and recovery
+</Update>
+
+<Update label="August 2025" description="v0.1.0" tags={["Beta", "Launch"]}>
+  ## Closed Beta: Now LIVE
+
+  We're excited to announce that Flyweel's closed beta is now live! Connect your Google and Meta accounts to start optimizing your ad spend today.
 
   <Frame>
-<img className="block" src="https://mintlify-assets.b-cdn.net/hero-light.png" alt="Flyweel dashboard illustration" />
+    <img className="block" src="/images/closed-beta-hero.webp" alt="Flyweel closed beta launch" />
   </Frame>
 
   ### Features
 
-  * Responsive design
-  * Anchor for each update
-  * Generated RSS feed entry for each update
+  * Connect Google and Meta ad accounts in minutes
+  * Unified reporting across all campaigns
+  * Real-time spend tracking and alerts
+  * Two months free access for beta users
+  * Direct support from our founding team
 </Update>
